# ChangeLog for dev-perl/Apache-Test
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.12 2005/01/21 19:14:12 mcummings Exp $

  21 Jan 2005; Michael Cummings <mcummings@gentoo.org>
  Apache-Test-1.15.ebuild:
  Unmasking for x86

*Apache-Test-1.15 (28 Oct 2004)

  28 Oct 2004; Michael Cummings <mcummings@gentoo.org>
  +Apache-Test-1.15.ebuild:
  New version on cpan

  25 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> Apache-Test-1.07.ebuild:
  Marked stable on amd64.

*Apache-Test-1.11 (05 Jun 2004)

  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
  Apache-Test-1.11.ebuild:
  new version

  07 May 2004; Gustavo Zacarias <gustavoz@gentoo.org> Apache-Test-1.07.ebuild:
  Stable on sparc

  16 Apr 2004; Michael Cummings <mcummings@gentoo.org>
  Apache-Test-1.07.ebuild:
  Syntax fix for newdepend, bug 29064

  18 Feb 2004; Aron Griffis <agriffis@gentoo.org> Apache-Test-1.07.ebuild:
  stable on alpha and ia64

  15 Feb 2004; Michael Cummings,,, <mcummings@gentoo.org>
  Apache-Test-1.07.ebuild:
  Unmasking for x86

  18 Jan 2004; <tuxus@gentoo.org> Apache-Test-1.03.ebuild:
  Added ~mips to KEYWORDS.

*Apache-Test-1.07 (22 Dec 2003)

  22 Dec 2003; <rac@gentoo.org> Apache-Test-1.07.ebuild:
  upstream bump

*Apache-Test-1.03 (20 Jun 2003)

  20 Jun 2003; Michael Cummings <mcummings@gentoo.org>
  Apache-Test-1.03.ebuild:
  Apache test is actually to fill other deps, including the new libapreq
