@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Clone/Clone-0.15.ebuild,v 1.6 2005/01/21 21:48:30 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Clone/Clone-0.15.ebuild,v 1.7 2005/01/22 00:01:08 kloeri Exp $
 
 inherit perl-module
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://www.cpan.org/modules/by-authors/id/R/RD/RDF/${P}.readme"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="x86 ~amd64 ~alpha ~hppa ~mips ~ppc ~sparc ~ppc64"
+KEYWORDS="x86 ~amd64 alpha ~hppa ~mips ~ppc ~sparc ~ppc64"
 IUSE=""
 
 SRC_TEST="do"
