@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Clone
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Clone/ChangeLog,v 1.7 2005/01/21 21:48:30 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Clone/ChangeLog,v 1.8 2005/01/22 00:01:08 kloeri Exp $
+
+  22 Jan 2005; Bryan Østergaard <kloeri@gentoo.org> Clone-0.15.ebuild:
+  Stable on alpha.
 
   21 Jan 2005; Michael Cummings <mcummings@gentoo.org> Clone-0.15.ebuild:
   Unmasking for x86
