@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Apache-Test
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.12 2005/01/21 19:14:12 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Apache-Test/ChangeLog,v 1.13 2005/01/21 23:56:55 kloeri Exp $
+
+  22 Jan 2005; Bryan Østergaard <kloeri@gentoo.org>
+  Apache-Test-1.15.ebuild:
+  Stable on alpha.
 
   21 Jan 2005; Michael Cummings <mcummings@gentoo.org>
   Apache-Test-1.15.ebuild:
